<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_greeting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jktsans_bold"
                tools:text="Halo, Ilham Kusuma"
                android:textColor="@color/textPrimary"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jktsans_regular"
                android:text="@string/text_header_desc"
                android:textColor="@color/textPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_username" />

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dash_guide_horizontal_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13" />

        <TextView
            android:id="@+id/card_header_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_study_with"
            android:fontFamily="@font/jktsans_medium"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toBottomOf="@id/dash_guide_horizontal_top"/>

        <include
            android:id="@+id/dash_card_one"
            layout="@layout/dash_card" />

        <TextView
            android:id="@+id/header_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jktsans_medium"
            android:textSize="20sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dash_card_one"
            android:text="@string/text_available_materials" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dash_material_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_rv"
            tools:listitem="@layout/item_dashboard_material"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <TextView
            android:id="@+id/header_chatroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jktsans_medium"
            android:textSize="20sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dash_material_rv"
            android:text="@string/text_dash_chat" />

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="#EAFFE5"
            android:id="@+id/card_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header_chatroom"
            app:layout_constraintStart_toStartOf="parent"
            tools:showIn="@layout/fragment_dashboard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="12dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/card_two_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/chiro_one" />

                <TextView
                    android:id="@+id/text_chatroom_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/btn_chatroom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/card_two_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/jktsans_regular"
                    android:text="@string/text_card_chiro_dash_chat" />

                <Button
                    android:id="@+id/btn_chatroom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/text_chatroom_card"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/text_chatroom_card"
                    android:text="@string/text_akses_ruang_chat"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp"
                    android:textColor="@color/white"
                    android:backgroundTint="#956FD7"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>