<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.notifications.ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/profile_guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_view_frag"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@id/profile_guide_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_guide_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        tools:text="Ilham Kusuma"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:fontFamily="@font/jktsans_bold"
        />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        tools:text="ilhamkusuma98@gmail.com"
        android:textAlignment="center"
        android:fontFamily="@font/jktsans_regular"
        />

    <Button
        android:id="@+id/btn_edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:padding="10dp"
        android:text="@string/text_ubah_nama"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/jktsans_bold"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:backgroundTint="#956FD7"/>


    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_username"
        android:padding="10dp"
        android:text="@string/text_ubah_avatar"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/jktsans_bold"
        android:drawableLeft="@drawable/ic_edit_profile"
        android:backgroundTint="#956FD7"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile"
        android:padding="10dp"
        android:text="@string/text_logout"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/jktsans_bold"
        android:drawableLeft="@drawable/baseline_exit_to_app_24"
        android:backgroundTint="#956FD7"/>


</androidx.constraintlayout.widget.ConstraintLayout>